fix domination safari ios

--- a/veonDomination/scss/veonDomination.scss
+++ b/veonDomination/scss/veonDomination.scss
@@ -272,7 +272,7 @@ h6 {
                         width: 130px;
                         height: auto;
                         margin-bottom: 5vh;
-                        
+
                     }
                 }
                 .spacer {
@@ -342,6 +342,14 @@ h6 {
                     }
                 }
             }
+        }
+    }
+}
+
+.mac {
+    .veon__domination_block__content__app_buttons__container {
+        .app_btn{
+            margin-bottom: 15vh;
         }
     }
 }
